--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
 *.so
 *.o
-jsquery_gram.c
-jsquery_scan.c
-jsquery_gram.h
+monq_gram.c
+monq_scan.c
+monq_gram.h
 regression.diffs
 regression.out
+results
